# parking-motion

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
installer/: parking-motion.iss
installer/icons/: app.icns
parking_motion/: __main__.py  app.py  config.py
parking_motion/core/: events.py  exporter.py  motion.py  processor.py  subprocess_runner.py
parking_motion/ui/: events_table.py  export_controller.py  export_worker.py  file_list_panel.py  main_window.py  param_spec.py  params_panel.py  player.py  processing_controller.py  roi_widget.py  thumbnail_service.py  worker.py
tests/: test_config_pickle.py  test_event_aggregator.py  test_exporter.py  test_motion_detector.py
