[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parking-motion"
version = "0.1.0"
description = "Десктоп-приложение для детекции движения в ROI на видео CCTV"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Vragov Roman", email = "vragovR@yandex.ru" },
]
keywords = ["motion-detection", "cctv", "opencv", "pyside6", "parking", "video"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "PySide6>=6.6",
    "opencv-python>=4.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[project.urls]
Homepage = "https://github.com/vragovR/parking-motion"
Issues = "https://github.com/vragovR/parking-motion/issues"

[project.scripts]
parking-motion = "parking_motion.app:run"

[tool.setuptools.packages.find]
include = ["parking_motion*"]
